--- a/css/index.css
+++ b/css/index.css
@@ -130,8 +130,8 @@ ul, ol, li {
 .header_nav {
   height: 101px;
   background-color: #FFF;
-  border-bottom: 3px solid #de2f3c;
-  box-shadow: 0 3px 3px #CCC; }
+  /* border-bottom: 3px solid #de2f3c;
+    box-shadow: 0 3px 3px #CCC; */ }
 
 .header_nav .nav {
   width: 1190px;
@@ -291,9 +291,10 @@ ul, ol, li {
 
 /* header_banner */
 .header_banner {
-  position: relative;
+  width: 1349px;
+  margin: 0 auto;
   height: 439px;
-  background-color: #565656; }
+  position: relative; }
   .header_banner .hd {
     position: absolute;
     left: 0;
@@ -313,80 +314,85 @@ ul, ol, li {
         background-color: #e22430; }
     .header_banner .hd .on {
       background-color: #e22430; }
-  .header_banner .bd .tempWrap {
+  .header_banner .bd {
+    width: 1349px;
     overflow: hidden;
-    position: relative;
-    width: auto; }
-    .header_banner .bd .tempWrap .slide {
-      width: 5396px;
-      left: 0px;
-      position: relative;
+    margin: 0 auto;
+    position: relative; }
+    .header_banner .bd .tempWrap {
       overflow: hidden;
-      padding: 0px;
-      margin: 0px; }
-      .header_banner .bd .tempWrap .slide .pic1 {
-        background: rgba(0, 0, 0, 0) url("../images/pic1.jpg") no-repeat scroll center top;
-        float: left;
-        width: 1349px;
-        display: block;
-        height: 439px; }
-        .header_banner .bd .tempWrap .slide .pic1 a {
+      position: relative;
+      width: auto; }
+      .header_banner .bd .tempWrap .slide {
+        width: 5396px;
+        left: 0px;
+        position: relative;
+        overflow: hidden;
+        padding: 0px;
+        margin: 0px; }
+        .header_banner .bd .tempWrap .slide .pic1 {
+          background: rgba(0, 0, 0, 0) url("../images/pic1.jpg") repeat scroll center top;
+          float: left;
+          width: 1349px;
           display: block;
-          width: 1190px;
-          height: 439px;
-          margin: 0 auto; }
-      .header_banner .bd .tempWrap .slide .pic2 {
-        background: rgba(0, 0, 0, 0) url("../images/pic2.jpg") no-repeat scroll center top;
-        float: left;
-        width: 1349px;
-        display: block;
-        height: 439px; }
-        .header_banner .bd .tempWrap .slide .pic2 a {
+          height: 439px; }
+          .header_banner .bd .tempWrap .slide .pic1 a {
+            display: block;
+            width: 1190px;
+            height: 439px;
+            margin: 0 auto; }
+        .header_banner .bd .tempWrap .slide .pic2 {
+          background: rgba(0, 0, 0, 0) url("../images/pic2.jpg") repeat scroll center top;
+          float: left;
+          width: 1349px;
           display: block;
-          width: 1190px;
-          height: 439px;
-          margin: 0 auto; }
-  .header_banner .bd .prev {
-    margin-left: -595px;
-    width: 47px;
-    height: 80px;
-    margin-top: -40px;
-    left: 910px;
-    position: absolute;
-    top: 50%;
-    border-radius: 3px; }
-    .header_banner .bd .prev span {
-      display: block;
-      width: 100%;
-      height: 100%;
-      background: url(../images/base.png);
-      background-position: 0 -20px; }
-    .header_banner .bd .prev:hover {
-      background: rgba(0, 0, 0, 0.8); }
-  .header_banner .bd .next {
-    margin-right: -595px;
-    width: 47px;
-    height: 80px;
-    margin-top: -40px;
-    right: 50%;
-    position: absolute;
-    top: 50%;
-    border-radius: 3px; }
-    .header_banner .bd .next span {
-      display: block;
-      width: 100%;
-      height: 100%;
-      background: url(../images/base.png);
-      background-position: -47px -20px; }
-    .header_banner .bd .next:hover {
-      background: rgba(0, 0, 0, 0.8); }
+          height: 439px; }
+          .header_banner .bd .tempWrap .slide .pic2 a {
+            display: block;
+            width: 1190px;
+            height: 439px;
+            margin: 0 auto; }
+    .header_banner .bd .prev {
+      margin-left: -595px;
+      width: 47px;
+      height: 80px;
+      margin-top: -40px;
+      left: 910px;
+      position: absolute;
+      top: 50%;
+      border-radius: 3px; }
+      .header_banner .bd .prev span {
+        display: block;
+        width: 100%;
+        height: 100%;
+        background: url(../images/base.png);
+        background-position: 0 -20px; }
+      .header_banner .bd .prev:hover {
+        background: rgba(0, 0, 0, 0.8); }
+    .header_banner .bd .next {
+      margin-right: -595px;
+      width: 47px;
+      height: 80px;
+      margin-top: -40px;
+      right: 50%;
+      position: absolute;
+      top: 50%;
+      border-radius: 3px; }
+      .header_banner .bd .next span {
+        display: block;
+        width: 100%;
+        height: 100%;
+        background: url(../images/base.png);
+        background-position: -47px -20px; }
+      .header_banner .bd .next:hover {
+        background: rgba(0, 0, 0, 0.8); }
   .header_banner .goodslist {
     position: absolute;
-    height: 402px;
+    height: 415px;
     width: 221px;
     z-index: 10;
     top: 0;
-    left: 80px;
+    left: 5.9%;
     padding: 12px 0;
     background: rgba(0, 0, 0, 0.5); }
     .header_banner .goodslist #goodslist-ul {
@@ -397,7 +403,7 @@ ul, ol, li {
         top: -12px;
         left: 221px;
         width: 798px;
-        height: 383px;
+        height: 397px;
         background-color: #fff;
         border: 1px solid #eee;
         padding: 20px 30px;
@@ -450,7 +456,7 @@ ul, ol, li {
     margin: 0 auto; }
     .buying .wrap .ad_list {
       position: absolute;
-      top: -14px;
+      top: 5px;
       left: 0; }
       .buying .wrap .ad_list a {
         float: left;
